<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pimpmywed.ui.DashboardFragment"
        android:label="@string/title_countdown"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pimpmywed.ui.HomeFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pimpmywed.ui.LayoutFragment"
        android:label="@string/title_layout"
        tools:layout="@layout/fragment_positions" />

    <fragment
        android:id="@+id/navigation_search_edit"
        android:name="com.example.pimpmywed.ui.SearchEditGuestFragment"
        android:label="@string/title_search_edit"
        tools:layout="@layout/fragment_positions" />
</navigation>