<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <data>-->
<!--        <variable name="numberOfDaysVal" type="String" />-->
<!--        <variable name="numberOfHoursVal" type="String" />-->
<!--        <variable name="numberOfMinutesVal" type="String" />-->
<!--        <variable name="numberOfSecondsVal" type="String" />-->
<!--    </data>-->

    <data>
        <variable
            name="dashboardViewModel"
            type="com.example.pimpmywed.viewmodel.DashboardViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/numberOfDays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/counter_size"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/poiret_one"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.4"
                android:gravity="end"
                android:text="@{dashboardViewModel.text.days}"/>

            <TextView
                android:id="@+id/daysLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintStart_toEndOf="@+id/numberOfDays"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/poiret_one"
                android:text="@string/days"
                android:layout_marginLeft="@dimen/counter_margin_size_horizontal"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/numberOfHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberOfDays"
                android:fontFamily="@font/poiret_one"
                app:layout_constraintWidth_percent="0.4"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@{dashboardViewModel.text.hours}"/>

            <TextView
                android:id="@+id/hoursLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintTop_toBottomOf="@+id/numberOfDays"
                app:layout_constraintStart_toEndOf="@+id/numberOfHours"
                app:layout_constraintWidth_percent="0.6"
                android:fontFamily="@font/poiret_one"
                android:text="@string/hours"
                android:layout_marginLeft="@dimen/counter_margin_size_horizontal" />

            <TextView
                android:id="@+id/numberOfMinutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberOfHours"
                app:layout_constraintWidth_percent="0.4"
                android:fontFamily="@font/poiret_one"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@{dashboardViewModel.text.minutes}"/>

            <TextView
                android:id="@+id/minutesLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintTop_toBottomOf="@+id/numberOfHours"
                app:layout_constraintStart_toEndOf="@+id/numberOfMinutes"
                app:layout_constraintWidth_percent="0.6"
                android:fontFamily="@font/poiret_one"
                android:text="@string/minutes"
                android:layout_marginLeft="@dimen/counter_margin_size_horizontal" />

            <TextView
                android:id="@+id/numberOfSeconds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberOfMinutes"
                app:layout_constraintWidth_percent="0.4"
                android:fontFamily="@font/poiret_one"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@{dashboardViewModel.text.seconds}"/>

            <TextView
                android:id="@+id/secondsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/counter_margin_size_vertical"
                android:textSize="@dimen/counter_size"
                app:layout_constraintTop_toBottomOf="@+id/numberOfMinutes"
                app:layout_constraintStart_toEndOf="@+id/numberOfSeconds"
                app:layout_constraintWidth_percent="0.6"
                android:fontFamily="@font/poiret_one"
                android:text="@string/seconds"
                android:layout_marginLeft="@dimen/counter_margin_size_horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>